--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -37,7 +37,7 @@
     background: #303445;
     left: 10px;
     right: 10px;
-    top: 80px;
+    top: 0;
     padding: 20px 0 0;
     z-index: 100000;
 }
@@ -477,9 +477,6 @@ textarea {
 }
 
 @media screen and (max-width: 768px) {
-    main {
-        margin: 28% 0 !important;
-    }
 
     iframe {
         height: 300px;
@@ -806,7 +803,7 @@ iframe {
 
 @media screen and (max-width: 768px) {
     main {
-        margin: 17% 0;
+        margin: 30px auto 90px;
     }
 
     .courseDet .productBuy span {
